[package]
name = "rustenberg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
chromiumoxide = { version = "0.5.1", features = ["tokio-runtime"], default-features = false }
futures = "0.3.28"
tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0.72"
axum = "0.6.19"
tower-http = { version = "0.4.3", features = ["trace"] }
validator = { version = "0.16.1", features = ["derive"] }
axum_typed_multipart = "0.5.2"
serde_json = "1.0"
